--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html in master -->
+<!-- index.html in master github wijziging-->
 <p>  conflict maken </P>
 <!--  index.html -->
 <p> hier staat tekst</P>
