contact html bijgewerkt

--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,6 @@
 <!-- hier komt code dit is een test html -->
 <!-- een wijziging tering hotfix -->
+<head>></head>
+<body>
+    <p>Jeroen zegt Hello World </p>
+</body>
