--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <!-- index.html in master github wijziging-->
-<p>  conflict maken </P>
-<!--  index.html -->
-<p> hier staat tekst</P>
+<HTML>
+<SCRIPT>
+document.write("Hello, world")
+gebruiker = "Jeroen"
+ document.write("Hello, " + gebruiker) 
+for (tel = 1; tel <= 4; tel++)
+{
+document.write("Ik zal verwijzen naar de oorspronkelijke auteur als ik een script kopieer")
+document.write("Ook zal ik leesbare namen gebruiken voor variabelen")
+} 
+
+function test()
+{
+document.write("test")
+return 123
+}
+ 
+tst = test()
+document.write(tst) 
+</SCRIPT>
+</HTML>
 
